mysql-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-test
  namespace: mysql-test

spec:
  selector:
    app: mysql-test

  ports:
    - port: 3306
      targetPort: 3306
